# naitei-journey

./: .eslintrc.js  .gitignore  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json
.github/workflows/: test.yml
backend/: .env.example  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  runtime.txt
backend/app/: config.py  main.py
backend/app/core/: config.py  dependencies.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2a677768acf8_change_id_to_uuid4.py  bc0627f3d016_relation_id_to_uuid4.py  c1b647c9d210_add_card_position.py
backend/app/models/: __init__.py  application_status.py  category.py  job.py  selection_flow.py  user.py
backend/app/repository/: application_status.py  category.py  job.py  selection_flow.py  user.py
backend/app/routers/: category.py  debug.py  job.py  user.py
backend/app/schemas/: application_status.py  category.py  job.py  selection_flow.py  user.py
backend/app/security/: auth0.py  auth_header.py  json_web_token.py  payload.py  verify_token.py
frontend/: .env.example  .eslintrc.js  Dockerfile  README.md  next.config.js  package-lock.json  package.json  stylelint.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/atoms/: boardAtom.ts
frontend/src/contexts/: AccessTokenContext.tsx
frontend/src/libs/: data.ts  dragAndDrop.ts  envValues.ts  gtag.ts  job.ts
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/core/: config.py
(+70 files in other folders)
