[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["chanon-mike <zzmikezz8520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.100.1"
pydantic-settings = "^2.0.2"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
